v2.2.1 (2019.07.xx)
  - Add Recorded TV category mapping for "News"
  
v2.2.0 (2019.07.20)
  - Update cURL library to version 7.65.3
  - Update libhdhomerun library to version 20190625
  - Update SQLite database engine to version 3.29.0
  - Add support for legacy RTP/UDP streaming directly from tuner devices
  - Add "Append repeat indicators to applicable episode names" setting
  - Add "Preferred tuner streaming protocol" advanced setting
  - Prevent error logging of every channel when EPG has been temporarily disabled due to an error

v2.1.0 (2019.06.27)
  - Update cURL library to version 7.65.1
  - Update libhdhomerun library to version 20190607
  - Switch default device discovery method to network broadcast from HTTP
  - Change default discovery interval from 1 hour to 10 minutes
  - Remove "Use network broadcast for device discovery" setting
  - Add "Use HTTP cloud-based device discovery" advanced setting
  - Fix bug causing multi-homed HDHomeRun devices from being detected during broadcast device discovery
  - Fix bug introduced in v2.0.0 preventing the "Delete episode" string from appearing in context menu(s)
  - Use HTTP POST method when modifying backend recording rules
  - Adapt to HDHomeRun RECORD engine 20190621 breaking changes

v2.0.4 (2019.06.19)
  - Adapt to backend API breaking change that caused "DVR Service Subscription Required" errors

v2.0.3 (2019.05.20)
  - Adapt to HDHomeRun RECORD engine 20190516beta2 breaking changes
  - Use HTTP POST method when setting tuner channel visibility flags

v2.0.2 (2019.05.08)
  - Update SQLite database engine to version 3.28.0
  - Prevent multiple Kodi threads from simultaneously requesting EPG data
  - Prevent individually malformed EPG data request results from aborting all remaining requests
  - Fix bug that allowed extraneous EPG entries to be transferred to Kodi
  - Fix bug that prevented successfully setting channel visibility flags